--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/groceryshop
 spring.datasource.username=root
-spring.datasource.password=Abhi123*
+spring.datasource.password=Bibin@123
 #spring.jpa.database-platform=org.hibernate.dialect.MYSQL8Dialect
 #hibernate properties
 #create,create-drop,ipdata,validate
